Fixed background on mobile

--- a/src/modules/layout/components/background/Background.module.css
+++ b/src/modules/layout/components/background/Background.module.css
@@ -36,6 +36,6 @@
 }
 
 .overlay {
-  max-width: 100dvw;
+  max-width: 100vw;
   overflow: hidden;
 }
